--- a/.travis.yml
+++ b/.travis.yml
@@ -16,8 +16,13 @@ install:
   - pip install -r requirements.txt
   - pip install django==$DJANGO --quiet
 
-script:
+before_script:
   - python manage.py makemigrations
   - python manage.py migrate
+
+script:
   - python manage.py test
   - flake8 ./ --max-line-length=130 --exclude=migrations --max-complexity 10
+  - nohup python manage.py runserver &
+  - sleep 10
+  - python manage.py local_fill_db
